-
Bug
-
Resolution: Done
-
P1: Critical
-
5.5.0 RC
-
None
-
7d5e849e2808e9051a6d3ab19f29109b852f7bc9
The build on Xcode 6.3 seems to have been broken by 1fb3273cfd5bb1b0d334e2b0eefdcf6cfbdd22e3. It changes the version of clang from Xcode 6.3 to 3.6 but I don't think that's correct. It still reports that it's based on 3.6svn.
- is required for
-
QTBUG-46863 Issues to be fixed before Qt 5.5.1
-
- Closed
-
| For Gerrit Dashboard: QTBUG-46833 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 115201,2 | Apple's 3.6.0svn based clang doesn't support -Winconsistent-missing-override | 5.5 | qt/qtbase | Status: MERGED | -1 | 0 |