Apple's 3.6.0svn based clang doesn't support -Winconsistent-missing-override

That's the version Apple ships with Xcode 6.3.2. We set the
threshold to Xcode 7, whose clang version supports the "missing
override" warning.

Change-Id: Ibcab8a45306120bdcd02ca5b0bb0d1c638cea177
Task-number: QTBUG-46833
Reviewed-by: Olivier Goffart (Woboq GmbH) <ogoffart@woboq.com>

cregit: 7d5e849e2808e9051a6d3ab19f29109b852f7bc9 https://github.com/qt/qtbase/commit/7d5e849e2808e9051a6d3ab19f29109b852f7bc9